# seafile-downloader

./: .gitignore  LICENSE  Makefile  README.md  init.py  pyproject.toml  requirements-all.txt  requirements.in  requirements.txt
.github/workflows/: qc-and-test.yaml  release.yaml  semver-checker.yaml
seafile_downloader/: __init__.py  __main__.py  constants.py  downloader.py  exceptions.py  models.py  urls.py
src/: __init__.py
tests/: __init__.py  conftest.py  test_geoclef.py
