[project]
dynamic = ["version", "readme", "dependencies"]
license = {file = "LICENCE"}
name = "seafile-downloader"
requires-python = ">=3.11"

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
readme = {file = "README.md"}
version = {attr = "seafile_downloader.__version__"}

[project.optional-dependencies]
all = ["seafile-downloader[dev]"]
dev = ["pip-tools", "ruff", "seafile-downloader[test]"]
test = ["pytest", "pytest-cov"]

[tool.setuptools.package-dir]
"seafile_downloader" = "seafile_downloader"

[tool.pytest.ini_options]
addopts = [
  "-vv",
  "-s",
]

[tool.coverage.run]
parallel = true

[tool.ruff.lint]
pydocstyle = {convention = 'google'}
select = [
  "E",
  "W",
  "F",
  "I",
  "B",
  "C4",
  "UP",
  "D",
]
